load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "profile_proto",
    visibility = ["//visibility:public"],
    srcs = ["srv/profile/proto/profile.proto"],
)

java_proto_library(
    name = "profile_java_proto",
    visibility = ["//visibility:public"],
    deps = [":profile_proto"],
)

java_grpc_library(
    name = "profile_java_grpc",
    srcs = ["profile_proto"],
    visibility = ["//visibility:public"],
    deps = [":profile_java_proto"],
)

proto_library(
    name = "rate_proto",
    visibility = ["//visibility:public"],
    srcs = ["srv/rate/proto/rate.proto"],
)

java_proto_library(
    name = "rate_java_proto",
    visibility = ["//visibility:public"],
    deps = [":rate_proto"],
)

java_grpc_library(
    name = "rate_java_grpc",
    srcs = [":rate_proto"],
    visibility = ["//visibility:public"],
    deps = [":rate_java_proto"],
)
