package(default_visibility = ["//visibility:public"])

load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "profile_proto",
    visibility = ["//visibility:public"],
    srcs = ["srv/profile/proto/profile.proto"],
)

proto_library(
    name = "rate_proto",
    visibility = ["//visibility:public"],
    srcs = ["srv/rate/proto/rate.proto"],
)