load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

java_proto_library(
    name = "profile_java_proto",
    deps = ["@booking//:profile_proto"],
)

java_grpc_library(
    name = "profile_java_grpc",
    srcs = ["@booking//:profile_proto"],
    deps = [":profile_java_proto"],
)

java_proto_library(
    name = "rate_java_proto",
    deps = ["@booking//:rate_proto"],
)

java_grpc_library(
    name = "rate_java_grpc",
    srcs = ["@booking//:rate_proto"],
    deps = [":rate_java_proto"],
)

java_library(
    name = "lib",
    srcs = glob(["src/main/java/**/*.java"]),
    runtime_deps = [
        "@io_grpc_grpc_java//netty",
    ],
    deps = [
        ":profile_java_proto",
        ":profile_java_grpc",
        ":rate_java_proto",
        ":rate_java_grpc",
        "@com_google_protobuf//:protobuf_java",
        "@com_google_protobuf//:protobuf_java_util",
        "@io_grpc_grpc_java//api",
        "@io_grpc_grpc_java//protobuf",
        "@io_grpc_grpc_java//stub",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_web",
        "@maven//:io_github_lognet_grpc_spring_boot_starter",
        # consul
        "@maven//:org_springframework_cloud_spring_cloud_commons",
        "@maven//:org_springframework_cloud_spring_cloud_loadbalancer",
        "@maven//:org_springframework_cloud_spring_cloud_context",
        "@maven//:org_springframework_cloud_spring_cloud_consul_core",
        "@maven//:org_springframework_cloud_spring_cloud_consul_discovery",
        "@maven//:org_springframework_cloud_spring_cloud_starter_consul_discovery",
        "@maven//:org_springframework_cloud_spring_cloud_starter_consul",
    ],
)

java_binary(
    name = "app",
    main_class = "me.sangdong.booking.BookingApplication",
    resources = ["//src/main/resources:application_yml"],
    runtime_deps = [
        ":lib",
    ],
)
